--- a/index.html
+++ b/index.html
@@ -11,12 +11,38 @@
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous" />
-    <title>Weather World</title>
+    <title>World Weather</title>
   </head>
   <body>
     <div class="container">
-      <h1>Hello World!!</h1>
-      <a href="" class="btn btn-primary"> Click me </a>
+      <div class="weather-app" >
+      <h1>Vienna</h1>
+      <ul>
+        <li>Wednesday 11:48</li>
+        <li>clear</li>
+      </ul>
+      <div class="row">
+        <div class="col-6">
+          <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear" />
+          23 ℃ | ℉
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>
+              Precipitation: 0%
+            </li>
+            <li>
+              Humidity:55%
+            </li>
+            <li>
+              Wind: 11 km/h
+            </li>
+          </ul>
+        </div>
+        </div>
+        <small>
+          <a href="https://github.com/EkateriniTri/Weather.App.Project" target="_blank">Open-source code</a> by Katerina Tri
+        </small>
     </div>
     <script src="src/app.js"></script>
   </body>
