--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="app-overview">
             <h1 id="city"></h1>
             <ul>
-              <li>Wednesday 11:48</li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
             <div class="row">
@@ -30,7 +30,7 @@
                   <img
                     src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                     alt="Clear"
-                    is="icon" />
+                    id="icon" />
                   <div>
                     <strong id="temperature"></strong
                     ><span class="unit"><strong id="temperature"></strong><span class="units">℃ |<a href="#">℉ </a></span>
@@ -39,9 +39,9 @@
               </div>
               <div class="col-6">
                 <ul>
-                  <li>Precipitation: 0%</li>
-                  <li>Humidity:55%</li>
-                  <li>Wind: 11 km/h</li>
+                  <li>Feels like: <span id="feel"></span>  ℃ </li>
+                  <li>Humidity: <span id="humidity"></span> % </li>
+                  <li>Wind: <span id="wind"></span> km/h</li>
                 </ul>
               </div>
             </div>
