--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
               <div class="col-6">
                 <div class="d-flex weather-temperature">
                   <img
-                    src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                    src=""
                     alt="Clear"
-                    id="icon" />
+                    id="icon"
+                    class = "float-left" />
                   <div>
                     <strong id="temperature"></strong
                     ><span class="unit"><strong id="temperature"></strong><span class="units">℃ |<a href="#">℉ </a></span>
