--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
     <div class="container">
       <div class="wrapper-app">
         <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div  class="row">
+              <div class="col-9">
+            <input type="search" placeholder="Type a city..." autofocus="on" autocomplete="off" class="form-control" id="city-input" />
+              </div>
+            <div class=col-3>
+            <input type="submit" value="search" class="btn btn-primary shadow sm w-100" id="searchCityButton" />
+           </div>
+            </div>
+            </form>
           <div class="app-overview">
             <h1 id="city"></h1>
             <ul>
-              <li>Last updated: <span id="date"></span></li>
+              <li>Last updated on: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
             <div class="row">
