--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous" />
-      <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>World Weather</title>
   </head>
@@ -19,15 +19,25 @@
       <div class="wrapper-app">
         <div class="weather-app">
           <form id="search-form" class="mb-3">
-            <div  class="row">
+            <div class="row">
               <div class="col-9">
-            <input type="search" placeholder="Type a city..." autofocus="on" autocomplete="off" class="form-control" id="city-input" />
+                <input
+                  type="search"
+                  placeholder="Type a city..."
+                  autofocus="on"
+                  autocomplete="off"
+                  class="form-control"
+                  id="city-input" />
               </div>
-            <div class=col-3>
-            <input type="submit" value="search" class="btn btn-primary shadow sm w-100" id="searchCityButton" />
-           </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="search"
+                  class="btn btn-primary shadow sm w-100"
+                  id="searchCityButton" />
+              </div>
             </div>
-            </form>
+          </form>
           <div class="app-overview">
             <h1 id="city"></h1>
             <ul>
@@ -37,27 +47,22 @@
             <div class="row">
               <div class="col-6">
                 <div class="d-flex weather-temperature">
-                  <img
-                    src=""
-                    alt="Clear"
-                    id="icon"
-                    class = "float-left" />
-                  <div>
-                    <strong id="temperature"></strong
-                    ><span class="unit"><strong id="temperature"></strong><span class="units">℃ |<a href="#">℉ </a></span>
+                  <img src="" alt="Clear" id="icon" class="float-left" />
+                  <div class="float-left">
+                    <strong id="temperature"></strong>
+                    <span class="unit">°C</span>                    
                   </div>
                 </div>
               </div>
               <div class="col-6">
                 <ul>
-                  <li>Feels like: <span id="feel"></span>  ℃ </li>
-                  <li>Humidity: <span id="humidity"></span> % </li>
+                  <li>Feels like: <span id="feel"></span> ℃</li>
+                  <li>Humidity: <span id="humidity"></span> %</li>
                   <li>Wind: <span id="wind"></span> km/h</li>
                 </ul>
               </div>
             </div>
           </div>
-        </div>
         <small>
           <a
             href="https://github.com/EkateriniTri/Weather.App.Project"
