--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Thu</div>
+
+                <img
+                  src="http://openweathermap.org/img/wn/50d@2x.png"
+                  alt=""
+                  width="42" />
+                <div class="weather-forecast-temperatures">
+                  <span class="weather-forecast-temperature-max">22° </span>
+                  <span class="weather-forecast-temperature-min">18°</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
