--- a/index.html
+++ b/index.html
@@ -10,27 +10,35 @@
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous" />
+          <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>World Weather</title>
   </head>
   <body>
+    <p>
+      Current weather
+    </p>
     <div class="container">
       <div class="wrapper-app">
         <div id="box-color"></div>
         <div class="weather-app">
           <form id="search-form" class="mb-3">
-            <div class="row">
-              <div class="col-9">
+            <div class="row mt-5">
+              <div class="col-sm-6">
                 <input
                   type="search"
                   placeholder="Type a city..."
                   autofocus="on"
                   autocomplete="off"
-                  class="form-control"
+                  class="form-control col-sm-6"
                   id="city-input" />
               </div>
-              <div class="col-3">
+              <div class="col-sm-3">
                 <input
                   type="submit"
                   value="search"
